# serialization

./: CMakeLists.txt  README.md  byteOrder.cpp  main.cpp
serialize/: custom_type.h  data_stream.cpp  data_stream.h  serializable.h
